--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
 .btn {
   display: inline-block;
   border: none;
-  background: darkgrey;
+  background:darkgreen;
   color: white;
   padding: 7px 20px;
   cursor: pointer;
